Add new APIs
